--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </header>
     <main>
       <section id="about" class="py-8 md:py-10">
-        <div class="max-w-6xl mx-auto px-4 bg-white rounded-xl shadow-sm ring-1 ring-stone-300 p-6 md:p-8">
+        <div class="max-w-6xl mx-4 md:mx-auto bg-white rounded-xl shadow-sm ring-1 ring-stone-300 p-6 md:p-8">
           <h3 class="text-2xl font-semibold tracking-tight text-stone-900 mb-2">About</h3>
           <div class="h-1 w-16 bg-sky-600 rounded mb-6 w-full"></div>
           <h5 class="text-lg mb-4">Full Name: Ali Alhammouri</h5>
@@ -56,7 +56,7 @@
         </div>
       </section>
       <section id="skills" class="py-8 md:py-10">
-        <div class="max-w-6xl mx-auto px-4 bg-white rounded-xl shadow-sm ring-1 ring-stone-300 p-6 md:p-8">
+        <div class="max-w-6xl mx-4 md:mx-auto bg-white rounded-xl shadow-sm ring-1 ring-stone-300 p-6 md:p-8">
           <h3 class="text-2xl font-semibold tracking-tight text-stone-900 mb-2">Skills</h3>
           <div class="h-1 w-16 bg-sky-600 rounded mb-6 w-full"></div>
           <ul class="grid md:grid-cols-2 gap-x-8 gap-y-2">
@@ -76,7 +76,7 @@
         </div>
       </section>
       <section id="interests" class="py-8 md:py-10">
-        <div class="max-w-6xl mx-auto px-4 bg-white rounded-xl shadow-sm ring-1 ring-stone-300 p-6 md:p-8">
+        <div class="max-w-6xl mx-4 md:mx-auto bg-white rounded-xl shadow-sm ring-1 ring-stone-300 p-6 md:p-8">
           <h3 class="text-2xl font-semibold tracking-tight text-stone-900 mb-2">Interests and Hobbies</h3>
           <div class="h-1 w-16 bg-sky-600 rounded mb-6 w-full"></div>
           <ul class="space-y-1">
@@ -90,7 +90,7 @@
         </div>
       </section>
       <section id="contact" class="py-8 md:py-10">
-        <div class="max-w-6xl mx-auto px-4 bg-white rounded-xl shadow-sm ring-1 ring-stone-300 p-6 md:p-8">
+        <div class="max-w-6xl mx-4 md:mx-auto bg-white rounded-xl shadow-sm ring-1 ring-stone-300 p-6 md:p-8">
           <h3 class="text-2xl font-semibold tracking-tight text-stone-900 mb-2">Contact Me</h3>
           <div class="h-1 w-16 bg-sky-600 rounded mb-6 w-full"></div>
           <ul class="space-y-1">
